force-app/main/default/objects/ALC_Stage_Config__mdt/ALC_Stage_Config__mdt.object-meta.xml
<CustomObject>
    <label>ALC Stage Config</label>
    <pluralLabel>ALC Stage Configs</pluralLabel>
</CustomObject>