force-app/main/default/objects/ALC_Stage_Config__mdt/fields/Column_Color__c.field-meta.xml
<CustomField>
    <fullName>Column_Color__c</fullName>
    <label>Column Color</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>