force-app/main/default/objects/ALC_Stage_Config__mdt/fields/Record_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_API_Name__c</fullName>
    <label>Record Type API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>