force-app/main/default/objects/ALC_Stage_Config__mdt/fields/Stage_API_Value__c.field-meta.xml
<CustomField>
    <fullName>Stage_API_Value__c</fullName>
    <label>Stage API Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>