force-app/main/default/objects/ALC_Stage_Config__mdt/fields/Stage_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Stage_Display_Label__c</fullName>
    <label>Stage Display Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>